[gd_scene format=3 uid="uid://0hvhunsovnt5"]

[ext_resource type="Script" uid="uid://cubus2hnn6ped" path="res://code/entity.gd" id="1_fvtld"]
[ext_resource type="Texture2D" uid="uid://bti6yjg2notj4" path="res://assets/creature.png" id="2_ct4mp"]
[ext_resource type="Texture2D" uid="uid://k7a5itxficwy" path="res://assets/Walking.png" id="3_oh5ij"]
[ext_resource type="Texture2D" uid="uid://bpvqpnmirsbm" path="res://assets/mask0.png" id="3_s4jxa"]
[ext_resource type="Script" uid="uid://ck62gdmn3jbps" path="res://code/copy_parent.gd" id="4_ct4mp"]
[ext_resource type="Texture2D" uid="uid://0oyo1x6op6de" path="res://assets/rat.png" id="5_ocx2q"]
[ext_resource type="Texture2D" uid="uid://nrm5c5i38cpa" path="res://assets/mask_indicator.png" id="6_do3l0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hp4bs"]
atlas = ExtResource("2_ct4mp")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2vtq"]
atlas = ExtResource("2_ct4mp")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocx2q"]
atlas = ExtResource("3_oh5ij")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms2ax"]
atlas = ExtResource("3_oh5ij")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm6y7"]
atlas = ExtResource("3_oh5ij")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dn68"]
atlas = ExtResource("3_oh5ij")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysk8y"]
atlas = ExtResource("3_oh5ij")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_22bi2"]
atlas = ExtResource("3_oh5ij")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m15l1"]
atlas = ExtResource("5_ocx2q")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybk2y"]
atlas = ExtResource("5_ocx2q")
region = Rect2(24, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2fvbb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp4bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2vtq")
}],
"loop": true,
"name": &"Cat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocx2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms2ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm6y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dn68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysk8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22bi2")
}],
"loop": true,
"name": &"Human",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Protag",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m15l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybk2y")
}],
"loop": true,
"name": &"Rat",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_34jf3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_s4jxa")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_fvtld"]
size = Vector3(0.54668045, 0.77371216, 0.1875534)

[sub_resource type="BoxShape3D" id="BoxShape3D_ct4mp"]
size = Vector3(3.457563, 2.548706, 5.5357265)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_do3l0"]
radius = 1.5
height = 3.4760265

[sub_resource type="Animation" id="Animation_22bi2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prompt:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_do3l0"]
resource_name = "mask_indicator"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Prompt:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.36602116, 1.9318739, 0.8122519),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 0), Vector2(0, 100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22bi2"]
_data = {
&"RESET": SubResource("Animation_22bi2"),
&"mask_indicator": SubResource("Animation_do3l0")
}

[node name="Entity" type="CharacterBody3D" unique_id=1737357155]
script = ExtResource("1_fvtld")
JUMP_VELOCITY = 4
can_jump = true
sprite = "Human"

[node name="SpriteBase" type="AnimatedSprite3D" parent="." unique_id=286295862]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.044953287, 1.4346362, 0.05040151)
pixel_size = 0.03
billboard = 2
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_2fvbb")
animation = &"Human"
frame = 3
frame_progress = 0.5945002

[node name="SpriteMask" type="AnimatedSprite3D" parent="SpriteBase" unique_id=1901796756]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03752573, -0.20000005, 0.15)
pixel_size = 0.03
billboard = 2
texture_filter = 0
render_priority = 1
sprite_frames = SubResource("SpriteFrames_34jf3")
animation = &"1"
script = ExtResource("4_ct4mp")
synced_properties = Array[String](["flip_h"])

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=2024580783]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.024873734, -0.06452, -0.029369354)
shape = SubResource("BoxShape3D_fvtld")

[node name="AmbushArea" type="Area3D" parent="." unique_id=1551020699]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AmbushArea" unique_id=1477769350]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.119984, 0.71916735, -0.07911658)
shape = SubResource("BoxShape3D_ct4mp")

[node name="DetectArea" type="Area3D" parent="." unique_id=1428388634]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2058618, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectArea" unique_id=1610235816]
transform = Transform3D(-0.02565357, -0.9996709, 0, 0.9996709, -0.02565357, 0, 0, 0, 1, 1.5604093, 0.22472435, 0.00462234)
shape = SubResource("CapsuleShape3D_do3l0")
debug_color = Color(0, 0.6, 0.21960784, 0.41960785)

[node name="SpotLight3D" type="SpotLight3D" parent="DetectArea" unique_id=2060730346]
transform = Transform3D(-5.9604638e-08, 0, -1, 0, 1, 0, 1, 0, -5.9604638e-08, -0.3948205, 0, -0.229848)
light_energy = 5.0
light_size = 1.0
spot_range = 4.5597334
spot_attenuation = -2.0
spot_angle = 23.820568
spot_angle_attenuation = 0.5

[node name="Prompt" type="Sprite3D" parent="." unique_id=1790289804]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.12528324, 0.8922935, -0.017171144)
visible = false
pixel_size = 0.002
billboard = 2
texture = ExtResource("6_do3l0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2109228369]
libraries/ = SubResource("AnimationLibrary_22bi2")
autoplay = &"mask_indicator"
playback_auto_capture_transition_type = 4

[connection signal="body_entered" from="AmbushArea" to="." method="_on_ambush_area_body_entered"]
[connection signal="body_exited" from="AmbushArea" to="." method="_on_ambush_area_body_exited"]
[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
